# libsoup-soap

./: AUTHORS  Makefile.am  README  configure.ac
libsoup-soap/: Makefile.am  lib.c  libsoup-soap.h  soup-soap-message.c  soup-soap-message.h  soup-soap-param-group.c  soup-soap-param-group.h  soup-soap-param.c  soup-soap-param.h  soup-soap.h
po/: POTFILES.in
src/: libsoup-soap-0.1.pc.in
